--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
 
             <input type="submit" value="Login">
         </form>
-        <p>Forgot Password? <a href="changePass.html">Change Here</a>.</p>
         <div class="register-link"></div>
         <p>Don't have an account? <a href="RegisterPage.php">Register Here</a>.</p>
-        <p>Admin? <a href="adminLoginPage.html">Login Here</a>.</p>
+        <p>Admin? <a href="adminLoginPage.php">Login Here</a>.</p>
     </div>
 
 </body>
